# AgentDocs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_zh.md  agent.md  agent_docs_proposal.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 0dbce9a0ed64_create_initial_tables.py  6edb8d7c7d2c_add_task_templates_and_doc_defaults.py
app/: __init__.py  config.py  db.py  errors.py  main.py  models.py  time_utils.py
app/api/: deps.py  docs.py  serializers.py  tasks.py  templates.py  versions.py
app/schemas/: common.py  docs.py  tasks.py  templates.py  versions.py
app/services/: document_service.py  markdown.py  simulated_agent.py  task_events.py  task_service.py  template_service.py
app/static/: index.css  index.html
docker/: entrypoint.sh
docs/: api_contract.md  api_contract_zh.md  architecture.md  architecture_zh.md
scripts/: live_smoke_test.py  simulate_agent.py
skills/agentdocs/: SKILL.md
skills/agentdocs-integration/: SKILL.md
skills/agentdocs-integration/references/: workflow.md
skills/agentdocs-integration/scripts/: agentdocs_skill_client.py
skills/agentdocs/references/: workflow.md
skills/agentdocs/scripts/: agentdocs_skill_client.py
tests/: conftest.py  test_agentdocs_skill.py  test_api.py  test_migrations.py  test_simulated_agent.py  test_ui_e2e.py
