[project]
name = "agentdocs"
version = "0.1.0"
description = "个人 Markdown 协作服务"
authors = [
    { name = "葛广言", email = "gy.ge@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.35.0",
]
